Code Update (Fully Stable) and Music Feature Added the Background Musics on the Game and Configuration Screen. Added the Butto Click Sounds. Added the Speaker Icon to Mute/Unmute the Background Music. Made the ReadMe File (For the Web Version). Successfully Updated the Board Dimensions.
The ReadMe.MD File (C++ Version) is also Updated with Small Changes.

--- a/Web/game.css
+++ b/Web/game.css
@@ -1,3 +1,16 @@
+* {
+    box-sizing: border-box;
+}
+body {
+    font-family: Georgia;
+    background-image: url(Resources/Background.jpg);
+    color: whitesmoke;
+}
+
+h2 {
+    text-align: center;
+    font-size: 48px;
+}
 
 #docs {
     font-size: 22px;
@@ -137,4 +150,19 @@ label:hover .tooltip {
 .end {
     pointer-events: none;
     opacity: 0.75;
+}
+
+
+#Speaker-Icon {
+    display: flex;
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    z-index: 10;
+}
+#SpeakerMuted-Icon{
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    z-index: 10;
 }
